<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">喵拍</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="retake">重拍</string>
    <string name="save">保存</string>
    <string name="share">分享</string>
    <string name="ptr_pull_to_refresh">Pull to refresh</string>
    <string name="ptr_release_to_refresh">Release to refresh</string>
    <string name="ptr_loading">Loading</string>
    <string name="ptr_last_updated">Updated: %1$s</string>

     <!-- 分享界面的字符串 -->
    <string name="share_to_friends">分享给朋友们</string>
    <string name="wechat">微信</string>
    <string name="friends">朋友圈</string>
    <string name="weibo">微博</string>
    <string name="qq">QQ</string>
    <string name="qqzone">QQ空间</string>
    
    <string name="star_show">明星喵拍秀</string>
    
    <string name="choosealbum">选择相册</string>
    <string name="choosephoto">选择照片</string>
    <string name="wechatfail">微信分享失败</string>
    <string name="wechatsuccess">微信分享成功</string>
    <string name="wechatcancel">微信分享取消</string>
    <string name="wechatmomentfail">朋友圈分享失败</string>
    <string name="wechatmomentsuccess">朋友圈分享成功</string>
    <string name="wechatmomentcancel">朋友圈分享取消</string>
    <string name="weibofail">微博分享失败</string>
    <string name="weibosuccess">微博分享成功</string>
    <string name="weibocancel">微博分享取消</string>
    <string name="qqfail">QQ分享失败</string>
    <string name="qqsuccess">QQ分享成功</string>
    <string name="qqcancel">QQ分享取消</string>
    <string name="qqzonefail">QQ空间分享失败</string>
    <string name="qqzonesuccess">QQ空间分享成功</string>
    <string name="qqzonecancel">QQ空间分享取消</string>
    <string name="content">#喵拍#</string>
    <string name="sharetitle">看看我的照片</string>
    <string name="find_picture">选择图片开始模仿吧~</string>
    <string name="touch_screen_take">点击屏幕拍摄照片</string>
    <string name="finish_saved">已保存到相册</string>
    
    
    <!-- 菜单界面string -->
    <string name="album">相册</string>
    <string name="yanyi">颜艺</string>
    <string name="super_star">巨星</string>
    <string name="cartoon">卡通</string>
    <string name="animal">萌宠</string>
</resources>