<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" 
            android:layout_marginLeft="@dimen/margin_left_or_right_share"
            android:layout_marginRight="@dimen/margin_applogo_share">
            <ImageView
                android:id="@+id/img_wechat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/wechat" 
                android:layout_marginBottom="@dimen/margin_logo_name_share"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/wechat"
                style="@style/share_app" />
        </LinearLayout>
         <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
             android:layout_marginRight="@dimen/margin_applogo_share" >
            <ImageView
                android:id="@+id/img_friends"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/friends" 
                android:layout_marginBottom="@dimen/margin_logo_name_share"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/friends"
                 style="@style/share_app"  />
        </LinearLayout>
         <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" 
             android:layout_marginRight="@dimen/margin_applogo_share">
            <ImageView
                android:id="@+id/img_weibo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/weibo" 
                android:layout_marginBottom="@dimen/margin_logo_name_share"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/weibo"
                 style="@style/share_app"  />
        </LinearLayout>
         <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
             android:layout_marginRight="@dimen/margin_applogo_share"
             >
            <ImageView
                android:id="@+id/img_qq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/qq" 
                android:layout_marginBottom="@dimen/margin_logo_name_share"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/qq"
                 style="@style/share_app"  />
        </LinearLayout>
         <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" 
            android:layout_marginRight="@dimen/margin_left_or_right_share">
            <ImageView
                android:id="@+id/img_qq_zone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/qq_zone"
                android:layout_marginBottom="@dimen/margin_logo_name_share" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/qqzone"
                 style="@style/share_app"  />
        </LinearLayout>
    </LinearLayout>
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/star_show"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        style="@style/share_title"
        android:layout_marginBottom="@dimen/margin_bottom_subtitle"
        />
     <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ffd2d2d2"
        />
    

</LinearLayout>
